--- a/03-Web页面建设：构建模块/01-真得快速过一遍.md
+++ b/03-Web页面建设：构建模块/01-真得快速过一遍.md
@@ -169,11 +169,63 @@ typora-copy-images-to: img\01
 
 > 额……我测试了一下，li元素是list-item，即它的CSS样式display属性值为 `list-item`。而ol则是 `display: block;`
 
+### ◇测试列表
+
+> test driving the list 
+
+![1543803462137](img/01/1543803462137.png)
+
+浏览器会自动为每个列表项编号，所以你不需要用p元素搞事情了，如 `<p>1. 我是 one item</p>`
+
+### ◇了解lists的更多细节
+
+![1543803749922](img/01/1543803749922.png)
+
+> ol或者ul元素总是要与li元素在一起才行，这些元素离不开对方……
+>
+> li元素标识了这些内容是一个个列表项，而ol元素则把它们都打包起来为一组！就像上学时，一个班里有4组学生，每组有12位同学，总共48名学生……
+>
+> 不要想着在你的座位上放一张你的照片，就表示你来上学了，如果真这样做了，那就只能请家长了呀！就像是不要在ol元素或者ul元素插入其它非li的元素，如img元素，当然你可以在li元素中使用，总之ol或ul的儿子只能是li……
+
+---
+
+![1543804557393](img/01/1543804557393.png)
+
+> 如何体现嵌套列表呢？——在此之前，你得知道`元素=开始标签+内容+结束标签`，至于内容嵌套元素的那些事儿，就不是此时这个内容的爸爸该管的事儿了……即子孙后代的事管不了了， 毕竟年纪大了，但是管孙子他爸还是可以的！
+>
+> 做法：
+>
+> 直接往li元素的内容中再搞个列表不就好了，当然，始终得注意ul或ol的儿子必须是li
+>
+> 话说，嵌套这东西是不是有限制，比如ul或ol就只能嵌套一些li元素，不能是诸如img等元素
+
+---
+
+![1543804926642](img/01/1543804926642.png)
+
+> 难道这世界就只有无序列表和有序列表？
+>
+> 不，还有一个叫定义列表（definition lists）的家伙！
+>
+> 这个列表的姿势很不一样，如dl元素只能嵌套两种元素，一种是dt、一种是dd，而且这2个元素是合起来作为一个列表项的！功能就是dd的内容用于描述dt的内容是个什么东西……
+>
+> **➹：**[66号美国国道 - Wikiwand](https://www.wikiwand.com/zh-hans/66%E5%8F%B7%E7%BE%8E%E5%9B%BD%E5%9B%BD%E9%81%93)
+>
+> 讲真，为了讲个列表植入广告好吗？不过，理解起来确实相当不错……
 
 
 
 
 
+
+
+
+
+
+
+
+
+---
 
 ## ★总结
 
@@ -195,11 +247,11 @@ typora-copy-images-to: img\01
 
 
 
-  ---
+---
 
   ![1543767829780](img/01/1543767829780.png)
 
-  ---
+---
 
   ![1543768010298](img/01/1543768010298.png)
 
