--- a/03-Web页面建设：构建模块/01-真得快速过一遍.md
+++ b/03-Web页面建设：构建模块/01-真得快速过一遍.md
@@ -213,15 +213,248 @@ typora-copy-images-to: img\01
 >
 > 讲真，为了讲个列表植入广告好吗？不过，理解起来确实相当不错……
 
+## ★嵌套
+
+### ◇是什么
+
+![1543810762551](img/01/1543810762551.png)
+
+什么叫嵌套呢？
+
+![1543810736271](img/01/1543810736271.png)
+
+把一个元素放入另一个元素中称为“嵌套”
+
+目前我们已经见过很多元素可以嵌套在其它元素中，如「p元素嵌套在body元素中」「把body元素放在html元素中」等等……总之HTML页面就是以这种方式构造的
+
+形象理解一点就是，**✎：**
+
+![1543811571134](img/01/1543811571134.png)
+
+### ◇重要性
+
+> The more you learn about HTML, the more important having this nesting in your brain becomes.
+> But no worries—before long you’ll naturally think about elements this way 
+
+您对HTML了解得越多，在您的大脑中建立这种嵌套就越重要。但不用担心，不久之后，您就会自然地以这种方式考虑元素
+
+还可以这样翻译：
+
+你对HTML了解得越多，**很好地掌握嵌套**就越显重要。不过不用担心，很快你就能很自然地以这种方式考虑元素了。
+
+> 之前，在为页面写样式的时候，就说过，不要添加多余的嵌套……偶尔，迫不得已可以为了让样式写得更方便可以添加嵌套，不过大多数我们都可以添加伪元素来做到！
+
+### ◇通过画图来理解嵌套
+
+![1543818672985](img/01/1543818672985.png)
 
 
 
+如何画出网页中元素的嵌套关系？
 
+你就画一颗像家谱那样的树（a family tree ）就可以了！最顶的是great-grandparents ，而下面的则是children 和 grandchildren
 
+#### 简单的网页
 
+![1543819098236](img/01/1543819098236.png)
 
+那么如何把它画成图呢？
 
+把每个元素画成是一个box就可以了，然后用线把那些嵌套的元素都给连接起来，换句话说就是兄弟元素之间就不需要用一根线连起来……
 
+![1543819522770](img/01/1543819522770.png)
+
+### ◇需要注意的
+
+#### 不要在元素中搞个闭标签出来
+
+> Using nesting to make sure your tags match 
+
+使用嵌套的话，那么你必须确保标签是匹配的！
+
+如果你了解元素如何嵌套，则第一个好处是你能避免标签不匹配。
+
+那么什么是标签不匹配呢？ 
+
+首先来看看正常的，**✎：**
+
+![1543819819437](img/01/1543819819437.png)
+
+这一切看起来都很正常，那么下面就给你一些写的不像样的HTML，让你看看何为不正常，**✎：**
+
+![1543820045035](img/01/1543820045035.png)
+
+你能告诉我为啥p元素就这样「心急」地结束了呢？为啥不等em元素结束了，你才结束呢？
+
+根据目前对嵌套的理解，em元素必须完全嵌套在p元素中，或者说em元素完全在p元素的肚子里面才行哈！
+
+而你的这种情况就像是这样，**✎：**
+
+![1543820439197](img/01/1543820439197.png)
+
+所以你必须，**✎：**
+
+![1543820341060](img/01/1543820341060.png)
+
+适当嵌套你的元素……
+
+#### 如果搞了呢？so what？
+
+如果你喜欢把嵌套弄得一团糟，而且也无所谓，这就像是你喜欢玩[俄罗斯轮盘](https://www.wikiwand.com/zh-cn/%E4%BF%84%E7%BE%85%E6%96%AF%E8%BC%AA%E7%9B%A4)（Russian roulette ）一样，即自杀式玩命游戏（在左轮手枪的六个弹巢放入一颗子弹，然后关上，之后将弹巢旋转，参与者需轮流将弹巢在旋转中的手枪，把枪口对着自己的脑袋按下扳机。直至有人中枪，或不敢按下扳机为止）……
+
+或许有时候你没有写正确的嵌套，在一些浏览器上也能正常显示，但是另外一些就GG了
+
+总之如果你能很好地掌握嵌套，那么就能避免标签不匹配的问题，即能让你的HTML能好好地在所有浏览器中正常工作！对于这一点，在后面的章节中关于对「industrial strength HTML 」的探讨尤为重要！
+
+### ◇练习
+
+#### 扮演浏览器找错误
+
+![1543821141703](img/01/1543821141703.png)
+
+这是一份有错误的HTML，**✎：**
+
+![1543821273879](img/01/1543821273879.png)
+
+#### 盛装舞会，猜猜我是谁？
+
+![1543821343433](img/01/1543821343433.png)
+
+![1543821567806](img/01/1543821567806.png)
+
+我测试了下这个真正地换行元素——br元素，它默认计算出来的display为inline，**✎：**
+
+![1543821716223](img/01/1543821716223.png)
+
+## ★对应特殊字符的字符实体
+
+![1543821925600](img/01/1543821925600.png)
+
+我有个问题，我希望在我的网页中提到 `<html>`元素，如果我真这么做了，那岂不是会把嵌套给搞乱呢？
+
+话说，用双引号或者其它什么字符括起来能行不？
+
+不行哈！
+
+你要知道浏览器是要用 `<`和 `>`来开始和结束标签的，如果在你的HTML内容中使用这2个字符，那么这就会有问题了啊！
+
+如果我非得用这2个字符呢？
+
+HTML提供了一种简单的方法来指定这些字符和其他特殊字符。那么这是一种什么样的简单方法呢？
+
+使用一种称为字符实体（character entity ）的简单缩写来指定这样一些特殊字符……
+
+那么它是如何工作的呢？
+
+1. 被认为是「特殊」的字符，如版权符号等这些你想在web页面中使用，但是无法在编辑器里输入的字符
+2. 如果你想要在HTML中直接输入这些字符，那么你就得查找这些字符相应的缩写，然后把它们输入进去就可以了
+3. 如 `>`字符的缩写是 `&gt;`
+
+所以，你如果想在你的页面中输入 `The <html> element rocks`，那么你就可以使用这些字符实体来做到，**✎：**
+
+![1543828368239](img/01/1543828368239.png)
+
+对了，有个很重要的特殊字符你需要知道，那就是 `&`（ampersand，＆等于and）字符。如果你想在你的HTML内容中出现一个 `&`字符，那么你就使用字符实体 `&amp;`，而不是直接使用这个 `&`字符，你要知道这个字符在你的键盘是存在的，就是数字键7头顶的那个 `&`。毕竟字符实体的开头是个 `&`哈，即它是有特别含义的……就像 `<`等这些特殊字符在浏览器看来是有特殊含义的！谁叫HTML的设计就是如此呢！
+
+之前说到版权符号的字符实体是 `&copy;` →☞    `&copyright;`
+
+如果你还想要了解其他的所有symbols（符号）以及foreign（外文）字符，你可以根据以下URL找到一些常用的字符实体……
+
+**➹：**[HTML Entities](https://www.w3schools.com/html/html_entities.asp)
+
+下面这个是更详尽的字符实体清单，**✎：**
+
+**➹：**[Code Charts](http://www.unicode.org/charts/)
+
+总之特殊字符需谨慎对待，因为它们并不是表面上所看到那个样子，而是有特殊含义的，是能够被解析的，而不是单纯地作为一个要被显示的字符对待……
+
+**➹：**[Emoji 简介 - 阮一峰的网络日志](http://www.ruanyifeng.com/blog/2017/04/emoji.html)
+
+### ◇没有蠢问题
+
+![1543830564777](img/01/1543830564777.png)
+
+![1543830591957](img/01/1543830591957.png)
+
+如果没有实体名，那就使用编号
+
+如大于号 `&gt;`→☞ `&#62;`
+
+### ◇破解位置挑战
+
+Evel博士想要统治全世界，为了与他的党羽们通信，他搭建了一个私人网页。
+
+此刻，你接收到了一个被拦截到的HTML片段，而其中可能包含着这位博士的行踪。所以需要根据你所掌握的HTML专业知识来破解这个代码，为此来发现他的行踪……
+
+![1543831600550](img/01/1543831600550.png)
+
+![1543831619796](img/01/1543831619796.png)
+
+你可以老实一点，在[HTML Entities](https://www.w3schools.com/html/html_entities.asp)这个页面上找资料，也可以copy这份HTML，然后在浏览器上打开，看看显示的是什么内容，**✎：** `  &#208;&epsilon;&tau;&#114;&ouml;&igrave;&tau;`
+
+> There's going to be an evil henchman meetup next month at my underground lair in Ðετröìτ Come join us.
+>
+> 将会有一个邪恶的亲信meetup下个月在我的地下巢穴Ðετroiτ来加入我们。
+
+## ★测试一些元素
+
+### ◇元素大杂烩
+
+![1543832937439](img/01/1543832937439.png)
+
+我们这是要吃火锅吗？话说，HTML元素这种我第一次见的食材真得好吃吗？
+
+## ★要点
+
+日志主人公说要感谢你，**✎：**
+
+![1543833164997](img/01/1543833164997.png)
+
+---
+
+![1543833304601](img/01/1543833304601.png)
+
+---
+
+![1543833439105](img/01/1543833439105.png)
+
+> 什么鬼？void元素和 「empty」元素不是同一个含义吗？好吧！以后叫img元素为void元素好了……
+
+## ★练习
+
+### ◇填字游戏
+
+> 右脑休息，左脑开动……
+
+![1543833562818](img/01/1543833562818.png)
+
+提示，**✎：**
+
+![1543833574329](img/01/1543833574329.png)
+
+翻译，**✎：**
+
+![1543833764767](img/01/1543833764767.png)
+
+答案，**✎：**
+
+![1543834223909](img/01/1543834223909.png)
+
+### ◇区分块级和行内元素
+
+![1543833837002](img/01/1543833837002.png)
+
+嗯，看起来像是一个内联元素，但是`<a>`还可以包围块无素，而不只是文本。所以，根据具体的上下文，`<a>`
+既可以是内联无素，也可以是块元素。
+
+糊涂了：
+`<br>`是块元素和内联无素之间的一个模糊地段。它确实会创建一个换行，不过不会像有两个`<p>`元素那样把文本分成单独的两块。
+
+我们还没有详细讨论这个元素，不过，没错，`<img>`确实是内联无素。先记住这一点。我们在第5章还会专门介绍。
+
+### ◇字符实体
+
+![1543834395887](img/01/1543834395887.png)
 
 
 
