--- a/05-认识媒体：给网页添加图像/01-认识媒体.md
+++ b/05-认识媒体：给网页添加图像/01-认识媒体.md
@@ -135,6 +135,129 @@ typora-copy-images-to: img\01
 
 ---
 
+## ★介绍img元素
+
+与处理其它HTML标记相比，处理图像要做更多工作，如需要发请求……
+
+### ◇基本知识
+
+![1546062451252](img/01/1546062451252.png)
+
+它还有其它属性吗？还有如何引入不在自己网站上的图片呢？
+
+### ◇img元素不再只是相对链接
+
+也就是说你可以是使用URL哈！总之：
+
+1. 图像跟HTML页面 一样，它们都是放在Web服务器中，即它们都有自己的URL
+2. 对于相同网站上的链接和图像，最好使用相对路径
+
+举个例子——使用URL链接一个图像：
+
+![1546062876695](img/01/1546062876695.png)
+
+这个URL就是图像的路径啦！
+
+练习——使用URL在Web页面中显示这张图片：
+
+![](https://wickedlysmart.com/hfhtmlcss/trivia/pencil.png)
+
+### ◇关于图像的问题
+
+1. img元素只是提供了一种方法来指定需要在页面中显示的图像的位置。也就是说通过img元素以及它的src属性就可以把一张图片显示到Web页面的某个位置咯！
+
+   通过CSS，我们有许多更改图像视觉样式的方法……
+
+   关于图像本身还有许多知识需要了解，如不同的图像格式会有什么作用？、为啥要使用这种格式而不是其它格式？、图像文件的大小？、如何准备在 Web页面中使用的图像？
+
+2. void元素指的是没有内容和结束标签的元素，而img元素也是属于void元素这一类的！但是我们在页面中可以看到图片呀，难道图片不是内容吗？
+
+   > 更确切地讲，void元素是指HTML页面中在开始标签和结束标签之间没有任何内容的元素。没错，图像也是内容，不过`<img>`元素只是指向图像。**图像并不是HTML页面本身的一部分**。实际上，浏览器显示页面时，图像会取代`<img>`元素。另外要记住，**HTML页面是纯文本**，所以图像绝对无法直接作为页面的一部分。它是单独存在的。
+
+   关于void元素的定义，按照我的理解就是 :`<p></p>`，p元素此时没有内容，那么它也可以说是void元素，不过这显然不对头……毕竟不写内容的p元素是很没有意义的！
+
+   HTML页面是纯文本，目前我了解页面上有的感觉媒体有图片、音频、视屏……纯文本，讲真也可以说是感觉媒体！
+
+   **➹：**[媒体_百度百科](https://baike.baidu.com/item/%E5%AA%92%E4%BD%93)
+
+   既然说页面是纯文本，那么图片、音视频等显然不是HTML页面的本身一部分啦！如果针对void元素这个概念来说，它们是不属于HTML页面本身的一部分的！毕竟浏览器在显示页面时img元素GG了，即被图像给取代了 ！而像p元素这些，在页面所显示的内容，确实是我们在p元素里所写的内容，而不是凭空出现的内容！
+
+   再次回顾void元素的概念，我们在写img元素确实没写上任何内容，至于它为什么在页面上显示有内容并不是我们所关注的！我们只需要关注你到底有没有在元素中写内容！
+
+3. ![1546089445130](img/01/1546089445130.png)
+
+   通常浏览器会同时请求多个图像，然后会一个接一个显示图像，但这个过程极快，导致它们像是一同出现一样！
+
+4. ![1546089629426](img/01/1546089629426.png)
+
+   说到logo，那就用png好了！如果是动画，那就gif
+
+---
+
+### ◇一定要提供候选方案
+
+![1546089907069](img/01/1546089907069.png)
+
+可见你无法确定用户是如何访问你的页面，所以页面上的图像很有可能无法显示，所以alt属性就出现了！
+
+它是一个候选做法，即使用img元素的alt属性可以为访问者提供一些指示，告诉它们图像里有什么信息，就像是这样：
+
+![1546090285523](img/01/1546090285523.png)
+
+![1546090416621](img/01/1546090416621.png)
+
+「如果无法找到图像，那么就显示alt属性的内容」——不过，并不是所有浏览器都会这样做，所以你多测试几个浏览器就好了！
+
+### ◇img元素属性
+
+#### 调整图像大小
+
+img元素的另一个属性，只是一个吗？——不，应该是一对属性才对：width和height
+
+使用这些属性**可以提前告诉浏览器你的页面中一个图像的大小**……
+
+举个例子：
+
+![1546090937271](img/01/1546090937271.png)
+
+> width属性告诉浏览器「图像应该在页面中显示多宽」。
+
+1. 宽度和高度都使用像素数指定。
+
+2. 如果没有指定宽度和高度，那么浏览器会在显示图片之前自动确定图片的大小。。
+
+#### 一些疑问
+
+![1546091305256](img/01/1546091305256.png)
+
+1. 如果不指定这些属性，那么就会重新调整页面布局！
+2. 最好成对使用这两个属性
+3. 如果需要调整图像大小，那就用CSS好了，如果你设置的值与图片原本的尺寸一致，那么这些属性只是提供信息而已，而不是为了表现……
+
+---
+
+## ★一个案例
+
+1. 如今数码相机拍摄的大多数图像都很大，甚至非常大，如果让图片保持原样来让用户浏览的话，那么访问者要想看完整的图片就得拖动滚动条啦！
+
+   其实这很糟糕：
+
+   ![1546093805360](img/01/1546093805360.png)
+
+   > 浏览器窗口的大小包含滚动条
+   >
+   > 还有一个就是页面可视区域宽度
+   >
+   > chrome的滚动条宽度为17px
+   >
+   > **➹：**[javascript - 各浏览器滚动条默认宽度是多少？ - SegmentFault 思否](https://segmentfault.com/q/1010000004817695)
+
+
+
+
+
+
+
 
 
 
@@ -144,6 +267,36 @@ typora-copy-images-to: img\01
 ## ★总结
 
 - 以后再学习一下ps
+
+- 把Web、img、gif、jpeg、png等当作是个会讲话的家伙……即把它们拟人化……这样一来，它们会很有趣！
+
+- 关于对图片属性的启发：
+
+  1. 简单使用：就一个img元素和src属性
+  2. 安全点：添加个alt属性
+  3. 性能好点：添加与图片尺寸一致的width属性和height属性
+
+  这告诉了我「你所看到某个元素身上有很多属性，它们都是一步一步堆积起来的！而且每一步都是特别的意义，不会傻傻地写个没吊用的属性……」
+
+  总之，不要想着写一个src属性就意味着结束对img元素书写……因为它还可以变得更好……
+
+- 突然想到关于对布局的理解，以我们所租的房子（只要一个卫生间、一个阳台和一个大厅）为例，把大厅当作是一张网页的话，那么床该放在哪个位置呢？电脑做又该放置在哪儿呢？还有茶几等这些又放置在哪儿呢？可以一行铺两张床，也可以分两行即上下铺两张床：
+
+![1546093050533](img/01/1546093050533.png)
+
+---
+
+![1546093163034](img/01/1546093163034.png)
+
+可见这就是所谓的布局，而床等这些就是HTML页面上的元素啦！
+
+- 我是否可以把浏览器窗口的宽看作是一张图片的宽呢？
+
+
+
+
+
+
 
 ## ★Q&A
 
@@ -161,7 +314,22 @@ typora-copy-images-to: img\01
 
 ### ③png？
 
+![1546014562237](img/01/1546014562237.png)
+
 **➹：**[PNG 8,24,32 ......什么？ - PATRICK HANSEN](http://www.patrickhansen.com/2011/02/04/png-8-24-32-what/)
 
 **➹：**[PNG-8、24、32区别介绍 - 简书](https://www.jianshu.com/p/31207790bad2)
 
+### ④分辨率和像素？
+
+我的笔记本的分辨率：
+
+![1546094871259](img/01/1546094871259.png)
+
+**➹：**[分辨率和像素是什么关系？ - 知乎](https://www.zhihu.com/question/21149600)
+
+1英寸：2.54cm，大概是键盘上的两个键的宽度！
+
+dpi：每英寸点数！
+
+ppi：每英寸像素数！
