--- a/05-认识媒体：给网页添加图像/01-认识媒体.md
+++ b/05-认识媒体：给网页添加图像/01-认识媒体.md
@@ -509,13 +509,23 @@ thumbnail：则是缩略图！
 
   我们把字母周围的那些白色东东叫做光晕（光环），之所以会出现这些是因为照片编辑应用会创建一个“mette”，即杂边！然后根据背景颜色柔化边缘，当然应用在这个logo上时，是假设根据白色背景来搞事的，所以我们需要告诉应用我们得使用绿色背景来搞事哈！
 
-- 去掉光晕：获取Web页面的背景色，然后设置杂边为此色即可！
+- 去掉光晕：获取Web页面的背景色，然后设置杂边为此色即可！——颜色值忽略大小写
 
   ![1546247087580](img/01/1546247087580.png)
 
   然后点击预览可见：
 
   ![1546247119200](img/01/1546247119200.png)
+
+  可见这黄绿色杂边会让logo中的文本外观更柔和、更漂亮
+
+  对比默认白色的：
+
+  ![1546248216152](img/01/1546248216152.png)
+
+  ---
+
+  ![1546248231594](img/01/1546248231594.png)
 
 ### ◇背景色是什么？
 
@@ -525,11 +535,49 @@ thumbnail：则是缩略图！
 
 
 
+### ◇最后效果
 
+![1546248310439](img/01/1546248310439.png)
 
+很nice！
 
+### ◇关于图像的问题
 
+![1546249341042](img/01/1546249341042.png)
 
+讲真我不知道锯齿的概念哈！反正我就用杂边柔化就好了！——反正有曲线的，即有倾斜的线放大后都会有锯齿，当然你用svg就能很好地解决这个问题！
+
+## ★要点
+
+![1546250150365](img/01/1546250150365.png)
+
+##  ★练习
+
+### ◇填字游戏
+
+![1546250321893](img/01/1546250321893.png)
+
+提示：
+
+![1546250336460](img/01/1546250336460.png)
+
+![1546250356804](img/01/1546250356804.png)
+
+答案：
+
+![1546251356801](img/01/1546251356801.png)
+
+### ◇图像格式的选择
+
+![1546250668141](img/01/1546250668141.png)
+
+涉及透明度还是png好了！
+
+### ◇为什么写alt属性？
+
+无法正常显示图像的在不同浏览器中可能会有不同的结果。大多数情况下，浏览器都能使用额外的alt属性信息来改善显示。我们为什么关心这个问题呢？毕竟，这是Web页面中存在的一个错误，我们要修复它，对不对？嗯，在真实世界里，情况往往并不完美。有些东西会损坏，互联网连接可能在页面加载过程中断开，或者有视力障碍的用户需要听到图像里有什么，因为他们看不见。
+
+---
 
 ## ★总结
 
@@ -566,6 +614,14 @@ thumbnail：则是缩略图！
 - 把img元素放到一个a元素中，那么浏览器就会把这个图像当作是一个可单击的链接。单击这个图像时，浏览器会检索href中的页面：
 
   ![1546243689325](img/01/1546243689325.png)
+
+
+- 如果不需要考虑透明度，用jpeg真得很不错……即便是有损压缩，但还是可以的！
+
+- 图片质量高低的选择，如果需要高质量图像，那你就用，如果想要网站快点，那就用low。之所以用中，那是因为文件大小和图像质量都表现得很不错！是一个非常不错的折中方案！
+
+  不管认为low就好了，还是认为有必要把图片质量调到最高，都是可以的，总之这种选择是主观的！不会规定说你一定要这样什么的！
+
 
 
 
@@ -660,4 +716,22 @@ ppi：每英寸像素数！
 所以说，关于`.psd`的文件：
 
 表示这个文件是以Photoshop格式保存的，这是图像编辑软件常用的一种格式，不过Photoshop格式文件主要用于处理数字图像，而不是用于Web页面！所以你得到了以`.psd`文件，那么你要把它应用于Web，那么你就得把它弄成是为Web准备的图像！
+
+### ⑧图像有锯齿？
+
+**➹：**[这种图片里图形产生锯齿是怎么产生的，如何解决？ - 知乎](https://www.zhihu.com/question/20596955)
+
+这涉及到画斜线的问题：
+
+在光栅中画直线，垂直和水平的都好说，就是斜的不好画。现在的算法画出来是这样的：
+源自Wiki，Bresenham算法
+
+![img](img/01/2ba3c9b5410935ce237b96edb92cdfa4_b.jpg)
+
+放大了以后看到的都是这样的锯齿。
+
+解决办法一是用更高的分辨率，但是放大以后还是这样的锯齿。
+另外就是用矢量图，它用**基于方程的方法表现直线等元素，而非传统的像素**。这样在放大的时候可以通过对应的方程来得到想要的分辨率，也就不会出现锯齿。
+
+更明显的效果请参考大型3D游戏中采用的抗锯齿技术，开与不开效果差别很大。
 
